--- a/Hotel/src/main/resources/application.properties
+++ b/Hotel/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=hotel
+server.port=8083
 # ===================== DATOS DE CONEXIÓN =====================
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
-spring.datasource.username=proy_lenguajes
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=lengBDProyecto
 spring.datasource.password=123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
@@ -10,4 +11,3 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
