--- a/Hotel/src/main/resources/application.properties
+++ b/Hotel/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=hotel
 server.port=8083
 # ===================== DATOS DE CONEXIÓN =====================
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=JosthynAD
-spring.datasource.password=123456
+spring.datasource.username=BDlenguajes
+spring.datasource.password=789
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # No se usarán pero esto es requerido por Spring Boot
